--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Server Configuration
 PORT=3000
 NODE_ENV=development
+SERVE_FRONTEND=true
 
 # AWS Configuration
 AWS_REGION=ap-southeast-2
@@ -8,7 +9,9 @@ AWS_ACCESS_KEY_ID=your_access_key_id_here
 AWS_SECRET_ACCESS_KEY=your_secret_access_key_here
 
 # DynamoDB Configuration
-DYNAMODB_TABLE_PREFIX=invoice_system_
+DYNAMODB_USERS_TABLE=users
+DYNAMODB_INVOICES_TABLE=invoices
+USE_LOCAL_DYNAMODB=false
 
 # JWT Configuration
 JWT_SECRET=replace_with_your_secret_key
@@ -19,7 +22,9 @@ API_VERSION=v1
 
 # Cors Configuration
 ALLOWED_ORIGINS=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173
+APP_URL=http://localhost:3001
 
 # File Storage Configuration
 UPLOAD_DIR=./uploads
-MAX_FILE_SIZE=5242880  # 5MB in bytes 
+MAX_FILE_SIZE=5242880  # 5MB in bytes
